# accessibility-checker

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat  start_server.py
src/pptx_accessibility/: __init__.py
src/pptx_accessibility/api/: app.py
src/pptx_accessibility/api/routes/: analysis.py  upload.py
src/pptx_accessibility/core/: analyzer.py  config.py  session_manager.py
src/pptx_accessibility/pptx_access/: reader.py
src/pptx_accessibility/rules/: base.py  rule_01_structure.py  rule_03_contrast.py  rule_04_fonts.py
src/pptx_accessibility/utils/: color_utils.py
web/public/: index.html  styles.css
web/public/js/: upload.js
